feat: html and css start setting

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lampadina</title>
     <link rel="stylesheet" href="style.css">
+    <title>Lampadina</title>
 </head>
+
 <body>
-    
+    <section>
+        <div class="lamp">
+            <img class="white" src="/img/white_lamp.png" alt="light off">
+            <img class="yellow" src="/img/yellow_lamp.png" alt="light on">
+            <button><strong class="on">Accendi</strong><strong class="off">Spegni</strong></button>
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
