--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +10,14 @@
 
 <body>
     <section>
-        <div class="lamp">
-            <img class="white" src="/img/white_lamp.png" alt="light off">
-            <img class="yellow" src="/img/yellow_lamp.png" alt="light on">
-            <button><strong class="on">Accendi</strong><strong class="off">Spegni</strong></button>
+        <div class="off">
+            <img src="/img/white_lamp.png" alt="light off">
         </div>
+
+        <div class="on"></div>
+
+        <button id="button">Accendi</button>
+
     </section>
     <script src="script.js"></script>
 </body>
