feat; fine esercizio con quale piccola hint

--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Lampadina</title>
+    <title>Lamp</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <section>
-        <div class="off">
-            <img src="/img/white_lamp.png" alt="light off">
-        </div>
 
-        <div class="on"></div>
+    <div>
+        <img id="lamp" src="./img/white_lamp.png" alt="Lampadinaspenta" class="lampadina">
+        <button id="Btn">E luce fu</button>
+    </div>
 
-        <button id="button">Accendi</button>
+    <script src="./script.js"></script>
 
-    </section>
-    <script src="script.js"></script>
 </body>
+
 </html>
